[package]
name = "telefork"
version = "0.1.0"
authors = ["Tristan Hume <tris.hume@gmail.com>"]
edition = "2018"

[dependencies]
proc-maps = "0.1.6"
nix = "0.17.0"
libc = "0.2.67"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.18", features = ["derive"] }
camino = "1.1.9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
num_cpus = "1.12"
smallpt = "0.3.5"
bvh = "= 0.3.1"
png = "0.16.2"
